--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,10 @@ strong {
 	@apply font-medium;
 }
 
+ul a {
+	@apply font-normal;
+}
+
 a {
 	@apply underline font-medium underline-offset-2;
 	/* @apply hover:text-transparent hover:bg-clip-text hover:bg-gradient-to-tr hover:from-orange-400 hover:to-blue-500; */
