fontawesome self host

--- a/src/app.css
+++ b/src/app.css
@@ -22,3 +22,6 @@ p {
 	@apply opacity-40;
 	@apply hover:text-transparent hover:bg-clip-text hover:bg-gradient-to-tr hover:from-orange-400 hover:to-blue-500 hover:opacity-100;
 }
+div a i {
+	@apply text-2xl;
+}
